# edgetrans

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/edgetrans/: __init__.py  edge.py  translator.py
tests/: test_edge.py
